--- a/01-typescript-intro/tsconfig.json
+++ b/01-typescript-intro/tsconfig.json
@@ -1,11 +1,12 @@
 {
   "compilerOptions": {
+    "experimentalDecorators": true,
     "target": "ES2020",
     "useDefineForClassFields": true,
     "module": "ESNext",
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
-
+    
     /* Bundler mode */
     "moduleResolution": "node",
     "allowImportingTsExtensions": true,
